# Diplom_project

./: .env.bstack.example  .env.emulator_local.example  .env.example  .gitignore  README.md  config_mobile.py  pyproject.toml  pytest.ini
api_resources/: data.py
models/pages/mobile/: login_form.py
models/pages/web/: main_page.py  registration_form.py
okko/mobile_pages/: catalogue_page.py  login_form.py  main_page.py  shop_page.py
okko/web_pages/: main_page.py  registration_form.py
okko_tests/pages/mobile/: catalogue_page.py  login_form.py  main_page.py  shop_page.py
okko_tests/pages/web/: main_page.py  registration_form.py
okko_tests/utils/: attach.py
reqres_tests/request_helper/: api_call.py
reqres_tests/utils/: json_validator.py  logger.py  path.py
request_helper/: api_call.py
test_data/: resource.py
tests/API/: test_get_user_info.py  test_register_user.py  test_user_methods.py
tests/UI/: conftest.py  test_main_page.py  test_registration.py
tests/mobile/: conftest.py  test_buy_film.py  test_login_with_email.py  test_search_film_by_name.py
utils/: json_validator.py  path.py
